# lab4

./: CMakeLists.txt
lib/: hamarc.cpp  hamarc.h  hammimgcode.cpp  hammimgcode.h  parsing.cpp  parsing.h
